[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argonet"
dynamic = ["version"]
description = "Network reconnaissance - geolocation, DNS resolution, and traceroute"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "prodrom3" },
]
dependencies = [
    "geoip2",
]

[project.scripts]
argonet = "argonet:main"

[project.optional-dependencies]
scapy = [
    "scapy",
]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "types-geoip2",
    "scapy",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["core*"]

[tool.setuptools]
py-modules = ["argonet"]

[tool.mypy]
python_version = "3.10"
strict = true
